@@ -1,4 +1,4 @@
-List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.2.5:
+List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.2.6:
 
 Epson EC 4020 Series
 Epson EC 4030 Series
@@ -86,9 +86,11 @@ Epson L15150 Series
 Epson L15160 Series
 Epson L15180 Series
 Epson L18050 Series
+Epson M1050 Series
 Epson M1140 Series
 Epson M1170 Series
 Epson M1180 Series
+Epson M2050 Series
 Epson M2140 Series
 Epson M2170 Series
 Epson M3140 Series
