@@ -3,7 +3,7 @@
 
 EAPI=6
 
-DSC_F="dsc/f/03/00/14/85/44/53de0101f8edea23a3fbe35e0ab949c95f2d23ac"
+DSC_F="dsc/f/03/00/15/03/68/096d68b8c6f18964a4b646bdd35d61635c647fda"
 MY_PV="${PV}-1"
 
 DESCRIPTION="Epson ESC/P-R 2 generic Inkjet Printer Driver"
@@ -11,7 +11,7 @@ HOMEPAGE="https://support.epson.net/linux/Printer/LSB_distribution_pages/en/escp
 # to get the (link for the) .tar.gz sources, which are identical to the .rpm sources for x86, one must "click here" for the "source package for arm CPU"
 # the sources are often (delayed) also available from the EPSON driver download page: https://download.ebz.epson.net/dsc/search/01/search/?OSC=LX
 SRC_URI="https://download3.ebz.epson.net/${DSC_F}/${PN}-${MY_PV}.tar.gz"
-LICENSE="EPSON-EULA LGPL-2.1"
+LICENSE="SEIKO-EPSON-EULA LGPL-2.1"
 SLOT="0"
 KEYWORDS="amd64 x86 arm arm64"
 IUSE="escprlib"
@@ -44,4 +44,9 @@ src_install() {
     fi
     emake -C src DESTDIR="${D}" install
     einstalldocs
+}
+
+pkg_postinst() {
+        elog "The latest user manual is available online at:"
+        elog "    https://download.ebz.epson.net/man/linux/escpr2.html"
 }
